--- a/assets/package.json
+++ b/assets/package.json
@@ -6,8 +6,16 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "file-extension": "^4.0.5",
+    "lang-map": "^0.4.0",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-highlight": "^0.12.0",
+    "react-router-dom": "^5.0.0",
+    "use-phoenix-channel": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
