--- a/assets/package.json
+++ b/assets/package.json
@@ -10,10 +10,11 @@
     "lang-map": "^0.4.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
+    "prism-react-renderer": "^0.1.6",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-highlight": "^0.12.0",
+    "react-fs-tree": "^0.1.1",
     "react-router-dom": "^5.0.0",
     "use-phoenix-channel": "^1.1.1"
   },
