--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "file-extension": "^4.0.5",
+    "file-loader": "^4.0.0",
     "lang-map": "^0.4.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
@@ -14,8 +15,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-fs-tree": "^0.1.1",
+    "react-folder-tree": "^3.0.0",
     "react-router-dom": "^5.0.0",
+    "react-sidebar": "^3.0.2",
+    "url-loader": "^2.0.0",
     "use-phoenix-channel": "^1.1.1"
   },
   "devDependencies": {
