--- a/assets/package.json
+++ b/assets/package.json
@@ -15,8 +15,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-fancy-select": "^1.0.1",
     "react-folder-tree": "^3.0.0",
     "react-router-dom": "^5.0.0",
+    "react-select": "^3.0.4",
     "react-sidebar": "^3.0.2",
     "url-loader": "^2.0.0",
     "use-phoenix-channel": "^1.1.1"
