--- a/assets/package.json
+++ b/assets/package.json
@@ -9,6 +9,7 @@
     "file-extension": "^4.0.5",
     "file-loader": "^4.0.0",
     "lang-map": "^0.4.0",
+    "moment": "^2.24.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "prism-react-renderer": "^0.1.6",
@@ -17,7 +18,8 @@
     "react-dom": "^16.8.6",
     "react-fancy-select": "^1.0.1",
     "react-folder-tree": "^3.0.0",
-    "react-router-dom": "^5.0.0",
+    "react-moment": "^0.9.2",
+    "react-router-dom": "^5.0.1",
     "react-select": "^3.0.4",
     "react-sidebar": "^3.0.2",
     "url-loader": "^2.0.0",
