--- a/assets/package.json
+++ b/assets/package.json
@@ -6,10 +6,14 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "classes": "^0.3.0",
     "classnames": "^2.2.6",
     "file-extension": "^4.0.5",
     "file-loader": "^4.0.0",
+    "google-map-react": "^1.1.4",
     "lang-map": "^0.4.0",
     "moment": "^2.24.0",
     "phoenix": "file:../deps/phoenix",
